Kubernetes/Demo/k8-master01/k8s/demo/kubernetes/yamls/ingress-demo/traefik/simple-ingress-routes/4-ingressroute-development.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: development
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`nginx.example.com`) && Header(`From`, `test@example.com`)"
      kind: Rule
      services:
        - name: nginx-deploy-main
          port: 80
